# gocam-py

./: .gitignore  404.html  AGENTS.md  Makefile  README.md  config.yaml  index.html  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml
.github/: dependabot.yml
Activity/: index.html
Association/: index.html
BiologicalProcessAssociation/: index.html
BiologicalProcessPhaseAssociation/: index.html
BiologicalProcessTermObject/: index.html
Boolean/: index.html
CausalAssociation/: index.html
CausalPredicateEnum/: index.html
CellTypeAssociation/: index.html
CellTypeTermObject/: index.html
CellularAnatomicalEntityAssociation/: index.html
CellularAnatomicalEntityEnum/: index.html
CellularAnatomicalEntityTermObject/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
EnabledByAssociation/: index.html
EnabledByGeneProductAssociation/: index.html
EnabledByProteinComplexAssociation/: index.html
EvidenceCodeEnum/: index.html
EvidenceItem/: index.html
EvidenceTermObject/: index.html
Float/: index.html
GeneProductTermObject/: index.html
GrossAnatomicalStructureTermObject/: index.html
GrossAnatomyAssociation/: index.html
InformationBiomacromoleculeCategory/: index.html
InformationBiomacromoleculeTermObject/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
Model/: index.html
ModelStateEnum/: index.html
MolecularFunctionAssociation/: index.html
MolecularFunctionTermObject/: index.html
MoleculeAssociation/: index.html
MoleculeNode/: index.html
MoleculeTermObject/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Object/: index.html
Objectidentifier/: index.html
PartOfProteinComplexAssociation/: index.html
PhaseAssociation/: index.html
PhaseEnum/: index.html
PhaseTermObject/: index.html
PredicateTermObject/: index.html
ProteinComplexHasPartAssociation/: index.html
ProteinComplexMemberAssociation/: index.html
ProteinComplexTermObject/: index.html
ProvenanceInfo/: index.html
PublicationObject/: index.html
QueryIndex/: index.html
Sparqlpath/: index.html
String/: index.html
TaxonTermObject/: index.html
TermAssociation/: index.html
TermObject/: index.html
(+2602 files in other folders)
