[tool.poetry]
name = "gocam"
version = "0.1.0"
description = "GO CAM Data Model (Python)"
authors = ["My Name <my-name@my-org.org>"]
license = "BSD-3"
readme = "README.md"
include = ["README.md", "src/gocam/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"
oaklib = "^0.6.10"

[tool.poetry.group.dev.dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = ">=1.1.1"
schemasheets = "^0.1.14"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]

[tool.poetry.scripts]
gocam = "gocam.cli:cli"

