[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "gocam"
description = "GO CAM Data Model (Python)"
authors = [{ name = "The Gene Ontology Consortium", email = "help@geneontology.org" }]
requires-python = ">=3.10"
readme = "README.md"
license-files = ["LICENSE"]
dynamic = ["version"]

dependencies = [
    "typer>=0.9,<1",
    "linkml-runtime>=1.1.24,<2",
    "prefixmaps>=0.2.6,<0.3",
    "pydantic>=2,<3",
    "pystow>=0.7.11",
    "pyyaml>=6,<7",
    "requests>=2,<3",
    "rich>=14.2.0",
]

[project.optional-dependencies]
cx2 = [
    "ndex2>=3.9.0,<4",
    "networkx[extra]>=3,<4",
]
oaklib = ["oaklib"]
owl = ["py-horned-owl"]

[project.scripts]
gocam = "gocam.cli:app"

[dependency-groups]
dev = [
    "linkml>=1.3.5,<2",
    "mkdocs-material>=8.2.8,<10",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "pytest>=8.2.2,<10",
    "requests-mock>=1.12.1,<2",
    "ruff==0.14.14",
    "ty==0.0.14",
]

[tool.hatch.build.targets.sdist]
exclude = ["pipeline/"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
markers = [
    "integration"
]

[tool.ruff]
exclude = [
    "project",
    "src/gocam/datamodel"
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ty.src]
exclude = ["notebooks/", "project/"]
